handles database ssl connection

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,10 @@
+# POSTGRES_HOST=ep-raspy-sea-aiyhnh46.c-4.us-east-1.aws.neon.tech
+# POSTGRES_PORT=5432
+# POSTGRES_USER=neondb_owner
+# POSTGRES_DB=neondb
+# POSTGRES_PASSWORD=npg_he7rp8uVFsTo
+
+
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=local_user
